# HeightMapViewer

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  heightmap.h  main  main.cpp  matrixRenderer  renderer.h
Data/data/: dtm1_33_115_135.tfw
Data/metadata/: dtm1_Klippefil.dbf  dtm1_Klippefil.shp  dtm1_Klippefil.shx  dtm1_Klippefil.sos  dtm1_Metadata.dbf  dtm1_Metadata.shp  dtm1_Metadata.shx  dtm1_Metadata.sos  dtm1_Tileinndeling.dbf  dtm1_Tileinndeling.shp  dtm1_Tileinndeling.shx  dtm1_Tileinndeling.sos
include/: camera.h  heightmap.h  renderer.h
src/: heightmap.cpp  main.cpp  renderer.cpp
